[gd_scene load_steps=44 format=2]

[ext_resource path="res://assets/sprites/whale_orange.png" type="Texture" id=1]
[ext_resource path="res://actors/player-states/Hurt.gd" type="Script" id=2]
[ext_resource path="res://actors/player-states/Dead.gd" type="Script" id=3]
[ext_resource path="res://actors/player-states/Duck.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/jump.wav" type="AudioStream" id=5]
[ext_resource path="res://components/Sounds.gd" type="Script" id=6]
[ext_resource path="res://assets/sounds/pickup.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/throw.wav" type="AudioStream" id=8]
[ext_resource path="res://actors/Player.gd" type="Script" id=9]
[ext_resource path="res://assets/sounds/hurt.wav" type="AudioStream" id=10]
[ext_resource path="res://actors/player-states/Move.gd" type="Script" id=11]
[ext_resource path="res://addons/snopek-state-machine/StateMachine.gd" type="Script" id=12]
[ext_resource path="res://assets/sounds/explosions/explosion3.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sounds/explosions/explosion2.wav" type="AudioStream" id=14]
[ext_resource path="res://actors/player-states/Jump.gd" type="Script" id=15]
[ext_resource path="res://actors/player-states/Idle.gd" type="Script" id=16]
[ext_resource path="res://assets/sounds/explosions/explosion1.wav" type="AudioStream" id=17]
[ext_resource path="res://actors/player-states/Slide.gd" type="Script" id=18]
[ext_resource path="res://assets/sounds/blops/blop3.wav" type="AudioStream" id=19]
[ext_resource path="res://assets/sounds/blops/blop1.wav" type="AudioStream" id=20]
[ext_resource path="res://assets/sounds/blops/blop2.wav" type="AudioStream" id=21]
[ext_resource path="res://actors/player-states/Fall.gd" type="Script" id=22]
[ext_resource path="res://assets/sprites/ninja-frog/ninja-frog-spritesheet.png" type="Texture" id=23]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.5, 28 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.5, 19 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 14 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 25, 14 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 19, 8 )

[sub_resource type="Animation" id=6]
resource_name = "Blop"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 60, 61, 62, 63, 64 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_play_blop_sound"
} ]
}

[sub_resource type="Animation" id=7]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 78 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Duck"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 75, 76 ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 36 ]
}

[sub_resource type="Animation" id=10]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 36 ]
}

[sub_resource type="Animation" id=11]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 74, 75, 76, 77, 78 ]
}

[sub_resource type="Animation" id=12]
length = 0.55
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FrontPickupPosition:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25, 0.35, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -2, -20 ), Vector2( -2, -19 ), Vector2( -2, -17 ), Vector2( -2, -16 ), Vector2( -2, -17 ), Vector2( -2, -19 ), Vector2( -2, -20 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BackPickupPosition:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25, 0.35, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 14, -20 ), Vector2( 14, -19 ), Vector2( 14, -17 ), Vector2( 14, -16 ), Vector2( 14, -17 ), Vector2( 14, -19 ), Vector2( 14, -20 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 24 ]
}

[sub_resource type="Animation" id=14]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=15]
resource_name = "Slide"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 50, 52, 53 ]
}

[sub_resource type="Animation" id=16]
resource_name = "SlideFinished"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 53 ]
}

[sub_resource type="Animation" id=17]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=18]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("FrontPickupPosition:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FrontPickupPosition:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2, -20 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BackPickupPosition:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BackPickupPosition:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 14, -20 ) ]
}

[sub_resource type="Animation" id=19]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("FrontPickupPosition:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FrontPickupPosition:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -2, -20 ), Vector2( 6, -22 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BackPickupPosition:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BackPickupPosition:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 14, -20 ), Vector2( 12, -20 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "Slide"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("FrontPickupPosition:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FrontPickupPosition:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2, -20 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BackPickupPosition:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BackPickupPosition:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 14, -10 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 17
script = ExtResource( 9 )

[node name="BackPickupPosition" type="Position2D" parent="."]
position = Vector2( 14, -17 )

[node name="BodySprite" type="Sprite" parent="."]
position = Vector2( 65, -47 )
texture = ExtResource( 23 )
offset = Vector2( -65, 32 )
hframes = 12
vframes = 7
frame = 78

[node name="FinSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -31 )
texture = ExtResource( 1 )
hframes = 7
vframes = 22
frame = 7

[node name="FrontPickupPosition" type="Position2D" parent="."]
position = Vector2( -2, -17 )

[node name="StandingCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 2, -28 )
shape = SubResource( 1 )

[node name="DuckingCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 2, -19 )
shape = SubResource( 2 )
disabled = true

[node name="SlidingCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -14 )
shape = SubResource( 3 )
disabled = true

[node name="PickupArea" type="Area2D" parent="."]
position = Vector2( 2, 0 )
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
modulate = Color( 0.827451, 0, 1, 1 )
position = Vector2( 0, -14 )
shape = SubResource( 4 )

[node name="PassThroughDetectorArea" type="Area2D" parent="."]
position = Vector2( 2, 0 )
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PassThroughDetectorArea"]
shape = SubResource( 5 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 12 )
allowed_transitions = "Idle -> Move
Idle -> Jump
Idle -> Duck
Idle -> Fall
Move -> Idle
Move -> Fall
Move -> Jump
Move -> Duck
Move -> Slide
Jump -> Idle
Jump -> Fall
Fall -> Idle
Fall -> Move
Duck -> Idle
Slide -> Idle
* -> Hurt
Hurt -> Idle
Hurt -> Dead"

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 16 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource( 22 )

[node name="Duck" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Slide" type="Node" parent="StateMachine"]
script = ExtResource( 18 )

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="StateMachine/Hurt"]
wait_time = 0.2
one_shot = true

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="SpriteAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Blop = SubResource( 6 )
anims/Dead = SubResource( 7 )
anims/Duck = SubResource( 8 )
anims/Fall = SubResource( 9 )
anims/Glide = SubResource( 10 )
anims/Hurt = SubResource( 11 )
anims/Idle = SubResource( 12 )
anims/Jump = SubResource( 13 )
anims/Land = SubResource( 14 )
anims/Slide = SubResource( 15 )
anims/SlideFinished = SubResource( 16 )
anims/Walk = SubResource( 17 )

[node name="PickupAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 18 )
anims/RotateUp = SubResource( 19 )
anims/Slide = SubResource( 20 )

[node name="Sounds" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Jump" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )
volume_db = -5.0
bus = "Sound Effects"

[node name="Pickup" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )
bus = "Sound Effects"

[node name="Throw" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )
bus = "Sound Effects"

[node name="Hurt" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )
bus = "Sound Effects"

[node name="Explode" type="Node" parent="Sounds"]

[node name="Explode1" type="AudioStreamPlayer" parent="Sounds/Explode"]
stream = ExtResource( 17 )
bus = "Sound Effects"

[node name="Explode2" type="AudioStreamPlayer" parent="Sounds/Explode"]
stream = ExtResource( 14 )
bus = "Sound Effects"

[node name="Explode3" type="AudioStreamPlayer" parent="Sounds/Explode"]
stream = ExtResource( 13 )
bus = "Sound Effects"

[node name="Blop" type="Node" parent="Sounds"]

[node name="Blop1" type="AudioStreamPlayer" parent="Sounds/Blop"]
stream = ExtResource( 20 )
bus = "Sound Effects"

[node name="Blop2" type="AudioStreamPlayer" parent="Sounds/Blop"]
stream = ExtResource( 21 )
bus = "Sound Effects"

[node name="Blop3" type="AudioStreamPlayer" parent="Sounds/Blop"]
stream = ExtResource( 19 )
bus = "Sound Effects"

[connection signal="frame_changed" from="BodySprite" to="." method="_on_BodySprite_frame_changed"]
[connection signal="body_exited" from="PassThroughDetectorArea" to="." method="_on_PassThroughDetectorArea_body_exited"]
[connection signal="state_changed" from="StateMachine" to="." method="_on_StateMachine_state_changed"]
[connection signal="timeout" from="StateMachine/Hurt/Timer" to="StateMachine/Hurt" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="SpriteAnimationPlayer" to="StateMachine/Idle" method="_on_SpriteAnimationPlayer_animation_finished"]
